[gd_scene load_steps=2 format=3 uid="uid://8aen3exhlsks"]

[ext_resource type="Script" path="res://client/menus/server_list_add_entry.gd" id="1_2tpeg"]

[node name="VBoxContainer" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_2tpeg")

[node name="Data" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Data"]
layout_mode = 2
text = "Name:"

[node name="Name" type="LineEdit" parent="Data"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Data"]
layout_mode = 2
text = "Host:"

[node name="HBoxContainer" type="HBoxContainer" parent="Data"]
layout_mode = 2

[node name="Host" type="LineEdit" parent="Data/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="Data/HBoxContainer"]
layout_mode = 2
text = "Port:"

[node name="Port" type="SpinBox" parent="Data/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 65535.0

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Cancel" type="Button" parent="Buttons"]
layout_mode = 2
text = " Cancel"

[node name="Spacer" type="Control" parent="Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Confirm" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Confirm"

[connection signal="text_changed" from="Data/HBoxContainer/Host" to="." method="_on_host_text_changed"]
[connection signal="pressed" from="Buttons/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Buttons/Confirm" to="." method="_on_confirm_pressed"]
